fixed cards padding on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,8 @@ p {
 .section-line {
   border-top: 1px solid rgba(0,0,0,.1);
 }
+
+
+/* utility */
+
+.u-margin-bottom { margin-bottom: 2rem !important;}
